modified landing page and added asigin up page

--- a/WebProject.html
+++ b/WebProject.html
@@ -21,34 +21,142 @@
         </div>
         <hr />
         <div class="header-nav2">
-          <button class="navigation"><a href="#">HOME</a></button>
-          <button class="navigation"><a href="#">PRODUCTS</a></button>
-          <button class="navigation"><a href="#">SERVICES</a></button>
-          <button class="navigation"><a href="#">SIGNUP</a></button>
+          <button class="navigation">
+            <a href="#" target="_blank">HOME</a>
+          </button>
+          <button class="navigation">
+            <a href="#" target="_blank">PRODUCTS</a>
+          </button>
+          <button class="navigation">
+            <a href="#" target="_blank">SERVICES</a>
+          </button>
+          <button class="navigation">
+            <a href="SignUp.html" target="_blank">SIGNUP</a>
+          </button>
         </div>
         <hr />
       </header>
       <div class="grid">
-        <a href="#" target="_blank"><img src="images/2.webp" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/18.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/11.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/5.webp" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/25.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/20.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/14.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/22.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/10.webp" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/15.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/18.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/7.webp" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/13.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/14.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/23.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/10.webp" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/5.webp" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/9.jpeg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/1.jpg" alt="" /></a>
-        <a href="#" target="_blank"><img src="images/4.webp" alt="" /></a>
+        <a href="#" target="_blank"
+          ><img src="images/2.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/18.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/11.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/5.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/25.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/20.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/14.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/22.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/10.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/15.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/18.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/7.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/13.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/14.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/23.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/10.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/5.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/9.jpeg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/1.jpg" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
+        <a href="#" target="_blank"
+          ><img src="images/4.webp" alt="" />
+          <div>
+            <p class="price">Shop Now</p>
+          </div>
+        </a>
       </div>
     </div>
     <footer>
