modified sign up page

--- a/SignUp.html
+++ b/SignUp.html
@@ -45,8 +45,8 @@
           />
           <label for="password">Confirm Password</label>
           <input
-            type="text"
-            placeholder="Enter First Name"
+            type="password"
+            placeholder="Confirm password"
             required
             name="password"
           />
