changed the layout and worked on the signup pages

--- a/WebProject.html
+++ b/WebProject.html
@@ -4,166 +4,200 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Market👖👗👠👜🛍️</title>
-    <link rel="stylesheet" href="WebProject.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <button class="logo">ISOKO🛒</button>
-    <div class="body-container">
-      <header>
-        <div class="header-nav1">
-          <input
-            type="search"
-            id="search"
-            placeholder="Enter your search..."
-            name="mySearch"
-          />
-          <button class="search">Search</button>
-        </div>
-        <hr />
-        <div class="header-nav2">
-          <button class="navigation">
-            <a href="#" target="_blank">HOME</a>
-          </button>
-          <button class="navigation">
-            <a href="#" target="_blank">PRODUCTS</a>
-          </button>
-          <button class="navigation">
-            <a href="#" target="_blank">SERVICES</a>
-          </button>
-          <button class="navigation">
-            <a href="SignUp.html" target="_blank">SIGNUP</a>
-          </button>
-        </div>
-        <hr />
-      </header>
-      <div class="grid">
-        <a href="#" target="_blank"
-          ><img src="images/2.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/18.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/11.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/5.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/25.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/20.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/14.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/22.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/10.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/15.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/18.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/7.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/13.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/14.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/23.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/10.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/5.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/9.jpeg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/1.jpg" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
-        <a href="#" target="_blank"
-          ><img src="images/4.webp" alt="" />
-          <div>
-            <p class="price">Shop Now</p>
-          </div>
-        </a>
+    <header>
+      <label class="logo">ISOKO🛒</label>
+      <div class="header-nav1">
+        <input
+          type="search"
+          id="search"
+          placeholder="Enter your search..."
+          name="mySearch"
+        />
+        <button class="search">Search</button>
       </div>
-    </div>
+      <div class="header-nav2">
+        <button class="navigation">
+          <a href="#" target="_blank">HOME</a>
+        </button>
+        <button class="navigation">
+          <a href="#" target="_blank" for="product">PRODUCTS</a>
+        </button>
+        <button class="navigation">
+          <a href="#" target="_blank">SERVICES</a>
+        </button>
+        <button class="navigation">
+          <a href="account.html" target="_blank">SIGNUP</a>
+        </button>
+      </div>
+    </header>
+    <section>
+      <div class="grid">
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/2.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/18.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"
+            ><p class="price">Shop Now</p>
+            <p></p
+          ></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/11.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/5.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/25.jpeg" alt="" />
+            <p>Price: $25</p>
+            <a href="#"><p class="price">Shop Now</p></a>
+          </a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/20.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/14.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/22.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/10.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/15.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/18.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/7.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/13.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/14.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/23.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/10.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/5.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/9.jpeg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/1.jpg" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+        <div class="img">
+          <a href="#" target="_blank">
+            <img src="images/4.webp" alt="" />
+          </a>
+          <p>Price: $25</p>
+          <a href="#"><p class="price">Shop Now</p></a>
+        </div>
+      </div>
+    </section>
     <footer>
-      <a href="#" target="_blank">&copy; Copyright 2024</a>
-      <a href="#" target="_blank">Terms and Condditions</a>
-      <a href="#" target="_blank">Privancy Policy</a>
-      <a href="#">Contact Us</a>
+      <div class="top">
+        <a href="#"><p>Back To Top</p></a>
+      </div>
+      <hr />
+      <div class="footer">
+        <a href="#" target="_blank">&copy; Copyright 2024</a>
+        <a href="#" target="_blank">Terms and Condditions</a>
+        <a href="#" target="_blank">Privancy Policy</a>
+        <a href="#">Contact Us</a>
+      </div>
+      <hr />
     </footer>
   </body>
 </html>
