--- a/blogin.html
+++ b/blogin.html
@@ -71,7 +71,7 @@
         </div>
         <div class="m-2">
           <button class="btn" type="submit">
-            <a href="seller.html">CONTINUE</a>
+            <a href="index.html">CONTINUE</a>
           </button>
         </div>
       </div>
