--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -230,7 +230,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -241,7 +241,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -252,7 +252,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -263,7 +263,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -274,7 +274,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -285,7 +285,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -296,7 +296,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -307,7 +307,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -318,7 +318,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -329,7 +329,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -340,7 +340,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -351,7 +351,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -362,7 +362,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -373,7 +373,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -384,7 +384,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -395,7 +395,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -406,14 +406,14 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="#" class="btn btn-primary">Shop Now</a>
+          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
     </div>
     <footer>
       <div class="row container-fluid m-5">
         <div class="col">
-          <a href="#" target="_blank">&copy; Copyright 2024</a>
+          <a href="sprofile.html" target="_blank">&copy; Copyright 2024</a>
         </div>
         <div class="col">
           <a href="#" target="_blank">Terms and Condditions</a>
