--- a/sprofile.html
+++ b/sprofile.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seller's Profile</title>
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.6.0/css/all.css"
     />
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/bootstrap.bundle.js" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+
+    <title>Seller's Profile</title>
+
     <style>
       .body {
         font-size: 24;
@@ -40,6 +46,23 @@
       .text-review {
         color: orange;
       }
+      .icons {
+        color: orange;
+      }
+      h2,
+      h6,
+      h5 {
+        color: black;
+      }
+      #about-tab,
+      #product-tab,
+      #reviews-tab {
+        color: black;
+      }
+      button .cart {
+        text-decoration: none;
+        color: black;
+      }
     </style>
   </head>
   <body class="body">
@@ -63,26 +86,24 @@
       <div class="card mt-5">
         <div class="card-header bg-custom text-white py-5">
           <div class="text-center">
-            <div class="text">
-              <h2>WINNARS SHOP Ltd</h2>
+            <div>
+              <h2>COMPANY / BUSINESS NAME</h2>
               <h6 class="text-muted">Company/Seller</h6>
               <h6>
-                <i class="fa fa-star"></i>
-                Memeber since 12/05/2024
+                <i class="fa fa-star icons"></i>
+                Memeber since 12/05/2013
               </h6>
               <div class="d-flex justify-content-center gap-3">
                 <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="#">
-                  <i class="fab fa-instagram"></i>
-                </a>
-                <a href="#">
-                  <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="#">
                   <i class="fab fa-whatsapp"></i>
                 </a>
+              </div>
+              <div class="d-flex justify-content-center gap-4 mt-2">
+                <h5>
+                  <i class="fa fa-user-group icons"></i>
+                  Followers:
+                  <span class="icons">12.2K</span>
+                </h5>
               </div>
             </div>
           </div>
@@ -158,10 +179,6 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <h5>Smart Watch E35</h5>
-                          <h6 class="text-review">
-                            <i class="fa fa-star"></i>
-                            4.3
-                          </h6>
                         </div>
                       </div>
                       <div class="card-body">
@@ -181,8 +198,10 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <button class="btn">
-                            <i class="fa fa-shopping-cart"></i>
-                            Add to cart
+                            <a href="cart.html" class="cart">
+                              <i class="fa fa-shopping-cart"></i>
+                              Add to cart
+                            </a>
                           </button>
                           <h5>$35.99</h5>
                         </div>
@@ -204,10 +223,6 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <h5>Old Camera TX5800</h5>
-                          <h6 class="text-review">
-                            <i class="fa fa-star"></i>
-                            4.0
-                          </h6>
                         </div>
                       </div>
                       <div class="card-body">
@@ -227,8 +242,10 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <button class="btn">
-                            <i class="fa fa-shopping-cart"></i>
-                            Add to cart
+                            <a href="cart.html" class="cart">
+                              <i class="fa fa-shopping-cart"></i>
+                              Add to cart
+                            </a>
                           </button>
                           <h5>$135.99</h5>
                         </div>
@@ -250,10 +267,6 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <h5>Coffe Cups</h5>
-                          <h6 class="text-review">
-                            <i class="fa fa-star"></i>
-                            4.6
-                          </h6>
                         </div>
                       </div>
                       <div class="card-body">
@@ -273,8 +286,10 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <button class="btn">
-                            <i class="fa fa-shopping-cart"></i>
-                            Add to cart
+                            <a href="cart.html" class="cart">
+                              <i class="fa fa-shopping-cart"></i>
+                              Add to cart
+                            </a>
                           </button>
                           <h5>$16.00</h5>
                         </div>
@@ -296,10 +311,6 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <h5>Makeups</h5>
-                          <h6 class="text-review">
-                            <i class="fa fa-star"></i>
-                            4.6
-                          </h6>
                         </div>
                       </div>
                       <div class="card-body">
@@ -319,8 +330,10 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <button class="btn">
-                            <i class="fa fa-shopping-cart"></i>
-                            Add to cart
+                            <a href="cart.html" class="cart">
+                              <i class="fa fa-shopping-cart"></i>
+                              Add to cart
+                            </a>
                           </button>
                           <h5>$120.00</h5>
                         </div>
@@ -342,10 +355,6 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <h5>Perfume 100ml</h5>
-                          <h6 class="text-review">
-                            <i class="fa fa-star"></i>
-                            4.6
-                          </h6>
                         </div>
                       </div>
                       <div class="card-body">
@@ -365,8 +374,10 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <button class="btn">
-                            <i class="fa fa-shopping-cart"></i>
-                            Add to cart
+                            <a href="cart.html" class="cart">
+                              <i class="fa fa-shopping-cart"></i>
+                              Add to cart
+                            </a>
                           </button>
                           <h5>$120.00</h5>
                         </div>
@@ -388,10 +399,6 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <h5>Eye Glasses</h5>
-                          <h6 class="text-review">
-                            <i class="fa fa-star"></i>
-                            4.9
-                          </h6>
                         </div>
                       </div>
                       <div class="card-body">
@@ -411,8 +418,10 @@
                           class="d-flex align-items-center justify-content-between"
                         >
                           <button class="btn">
-                            <i class="fa fa-shopping-cart"></i>
-                            Add to cart
+                            <a href="cart.html" class="cart">
+                              <i class="fa fa-shopping-cart"></i>
+                              Add to cart
+                            </a>
                           </button>
                           <h5>$45.00</h5>
                         </div>
