added myCart.html, production.json , main.css, and main.js filesand

--- a/sprofile.html
+++ b/sprofile.html
@@ -9,10 +9,13 @@
       href="https://use.fontawesome.com/releases/v6.6.0/css/all.css"
     />
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/bootstrap.bundle.js" />
+
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
+
+    <link rel="stylesheet" href="main.css" />
 
     <title>Seller's Profile</title>
 
@@ -23,20 +26,6 @@
       }
       .text {
         color: black;
-      }
-      .navbar {
-        width: 95px;
-        border: 1px solid white;
-        border-radius: 2px;
-      }
-      .navbar a {
-        color: white;
-      }
-      .btn {
-        background: orange;
-      }
-      .btn:hover {
-        color: white;
       }
       .fa,
       .fa-star,
@@ -163,13 +152,13 @@
               aria-labelledby="product-tab"
               tabindex="0"
             >
-              <div class="container">
+              <div class="containers">
                 <div class="row">
                   <div class="col-lg-4 col-md-6 col-12 py-3">
                     <div class="card">
                       <div class="card-img-top">
                         <img
-                          src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?q=80&w=1999&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          src="images/watch.avif"
                           height="250"
                           width="100%"
                         />
@@ -213,7 +202,7 @@
                     <div class="card h-100">
                       <div class="card-img-top">
                         <img
-                          src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          src="images/camera.avif"
                           height="250"
                           width="100%"
                         />
@@ -256,11 +245,7 @@
                   <div class="col-lg-4 col-md-6 col-12 py-3">
                     <div class="card h-100">
                       <div class="card-img-top">
-                        <img
-                          src="https://plus.unsplash.com/premium_photo-1719289799376-d3de0ca4ddbc?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                          height="250"
-                          width="100%"
-                        />
+                        <img src="images/cups.avif" height="250" width="100%" />
                       </div>
                       <div class="card-header">
                         <div
@@ -301,7 +286,7 @@
                     <div class="card h-100">
                       <div class="card-img-top">
                         <img
-                          src="https://images.unsplash.com/photo-1629198688000-71f23e745b6e?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          src="images/makeups.avif"
                           height="250"
                           width="100%"
                         />
@@ -345,7 +330,7 @@
                     <div class="card h-100">
                       <div class="card-img-top">
                         <img
-                          src="https://images.unsplash.com/photo-1593487568720-92097fb460fb?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          src="images/perfume.avif"
                           height="250"
                           width="100%"
                         />
@@ -389,7 +374,7 @@
                     <div class="card h-100">
                       <div class="card-img-top">
                         <img
-                          src="https://images.unsplash.com/photo-1626104853886-8f06aed1bec5?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                          src="images/glasse.avif"
                           height="250"
                           width="100%"
                         />
