--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -231,7 +231,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -242,7 +242,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -253,7 +253,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -264,7 +264,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -275,7 +275,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -286,7 +286,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -297,7 +297,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -308,7 +308,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -319,7 +319,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -330,7 +330,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -341,7 +341,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -352,7 +352,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -363,7 +363,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -374,7 +374,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -385,7 +385,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -396,7 +396,7 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
       <div class="card me-auto m-5" style="width: 18rem">
@@ -407,14 +407,14 @@
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
           </p>
-          <a href="sprofile.html" class="btn btn-primary">Shop Now</a>
+          <a href="myCart.html" class="btn btn-primary">Shop Now</a>
         </div>
       </div>
     </div>
     <footer>
       <div class="row container-fluid m-5">
         <div class="col">
-          <a href="sprofile.html" target="_blank">&copy; Copyright 2024</a>
+          <a href="#" target="_blank">&copy; Copyright 2024</a>
         </div>
         <div class="col">
           <a href="#" target="_blank">Terms and Condditions</a>
@@ -424,5 +424,6 @@
       </div>
     </footer>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
